<resources>
    <string name="app_name">Ma3an</string>
    <string name="copyright_notice">Powered by TEDMOB.COM</string>
    <string name="version_name">Version %s</string>
    <string name="consent_1_header_0_ar">معًا ضد الكورونا</string>
    <string name="consent_1_header_1_ar">هذا التطبيق ينذرك عند تعرضك  لفيروس كورونا ويساعد على وقف انتشار الوباء</string>
    <string name="consent_1_header_2_ar">يعلمك هذا التطبيق عن تواجدك على مسافة قريبة من مستخدم آخر أظهر نتيجة إيجابية لاختبار فيروس كورونا دون الكشف عن هويتك أو هوية المصاب</string>
    <string name="consent_1_header_3_ar">يقوم هذا التطبيق بإرسال ارشادات السلامة وكيفية التصرف عند التعرض لشخص مصاب</string>
    <string name="consent_1_header_0_en">Ma3an Against Corona</string>
    <string name="consent_1_header_1_en">This app alerts you when you are exposed to COVID-19 and helps stop the spread of the epidemic</string>
    <string name="consent_1_header_2_en">If you have been in contact with a user who tested positive for COVID-19, Ma3an will notify you and send you safety instructions, guiding you to the adequate action</string>
    <string name="consent_1_header_3_en">Ma3an will not disclose your identity or the identity of the user who tested positive for COVID-19</string>
    <string name="agree">Agree</string>
    <string name="agree_ar">أوافق</string>
    <string name="consent_2_header_1_ar">كيف يعمل هذا التطبيق؟</string>
    <string name="consent_2_header_2_ar"><![CDATA[ يستخدم هذا التطبيق إشارات البلوتوث لجمع المعلومات التالية: التاريخ، الوقت، وقوة إشارة البلوتوث المرتبطة  بأجهزة مستخدمي  التطبيق المجاورين
\n\n\يتم حفظ هذه المعلومات وتشفيرها حصراً  على هاتف المستخدم لمدة 21 يومًا
\n\n\فور تسجيل نتيجة إيجابية لاختبار فيروس كورونا لأي مستخدم سوف تقوم وزارة الصحة العامة بالإستعانة بهذه المعلومات لإنذارالمستخدمين المخالطين دون الكشف عن هوية المصاب او المخالطين إطلاقا
\n\n\لا يقوم التطبيق بجمع او حفظ أي بيانات متعلقة بتحديد الموقع الجغرافي أوأي بيانات شخصية]]></string>
    <string name="consent_2_header_1_en">How does Ma3an work?</string>
    <string name="consent_2_header_2_en"><![CDATA[The app uses Bluetooth to collect the following information: date, time, and strength of the Bluetooth signal from nearby users’ devices. The information is stored on your phone for 21 days
\n\nWhen a user tests positive for COVID-19, the information will allow the Ministry of Public Health to alert users who have been in close contact with the positive case without disclosing any of the users’ identities
\n\nNo geo-location or personal data is collected or stored by this app]]></string>
    <string name="next">Next</string>
    <string name="next_ar">التالي</string>
    <string name="login_header_1_ar">أدخل رقم هاتفك المحمول للتسجيل</string>
    <string name="login_header_1_en">Enter your mobile number to register</string>
    <string name="login_header_2_ar">ستحصل عبر رسالة نصية على رقم تعريف شخصي لمرة واحدة</string>
    <string name="login_header_2_en">You will receive a One-Time Pin (OTP) through SMS</string>
    <string name="submit">Submit</string>
    <string name="submit_ar">إرسال</string>
    <string name="invalid_number">Invalid Phone Number/رقم غير صحيح</string>
    <string name="invalid_number_en">Invalid Phone Number</string>
    <string name="invalid_number_ar">رقم غير صحيح</string>
    <string name="verification_header_1_ar">أدخل رقم التعريف الشخصي الذي تلقيته عبر الرسالة النصية</string>
    <string name="verification_header_1_en">Enter the OTP</string>
    <string name="pin_required">Pin is required</string>
    <string name="code_expiry_message_format">Your code will expire in %1$02d:%2$02d</string>
    <string name="code_expired_message">Your code has expired</string>
    <string name="verify">Verify</string>
    <string name="verify_ar">أكمل</string>
    <string name="permission_location_rationale">Please allow Location Permissions - Google requires this for your phone to scan for another phone’s Bluetooth. We do not use or store your location.</string>
    <string name="resend_code"><u>Resend Code</u></string>
    <string name="consent_3_header_1_ar">مطلوب موافقتك على آلية عمل هذا التطبيق خاصة بما يتعلق بالتالي:</string>
    <string name="consent_3_header_2_ar">حفظ رقم هاتفك المحمول في قاعدة بيانات وزارة الصحة العامة بطريقة آمنة وسرية</string>
    <string name="consent_3_header_3_ar">في حال اصابتك بفيروس الكورونا: السماح لوزارة الصحة باستعمال معلومات التطبيق الموجودة على هاتفك لإبلاغ المخالطين فور التشخيص دون الكشف عن هويتك أو هوية المخالطين</string>
    <string name="consent_3_header_4_ar">كيف استفيد من هذا التطبيق؟</string>
    <string name="consent_3_header_5_ar">في حال اصابة أحد المستخدمين: سوف ينذرك التطبيق عن تعرضك لفيروس الكورونا و تزويدك بالارشادات اللازمة دون الكشف عن هويتك أو هوية  المصاب</string>
    <string name="consent_3_header_1_en">Ma3an needs your consent for the following:</string>
    <string name="consent_3_header_2_en">To store your mobile number in a secured database, hosted at the Ministry of Public Health.</string>
    <string name="consent_3_header_3_en">If you test positive for COVID-19, allow the Ministry of Public Health to use the information stored on your phone to notify users who were in close contact with you without disclosing your identity or the identity of the contacts</string>
    <string name="consent_3_header_4_en">How do you Benefit from Ma3an?</string>
    <string name="consent_3_header_5_en">If a user tests positive, Ma3an will inform you that you have been in contact with a positive case and provide you with necessary instructions without disclosing any of the users’ identities</string>
    <string name="read_our">Read our</string>
    <string name="read_our_ar">اقرأ</string>
    <string name="privacy_safeguards">privacy policy</string>
    <string name="privacy_safeguards_ar">سياسة الخصوصية</string>
    <string name="proceed">Proceed</string>
    <string name="proceed_ar">تابع</string>
    <string name="setup_header_1_ar">تشغيل الإعدادات على التطبيق</string>
    <string name="setup_header_2_ar">إستفد من هذا التطبيق وساعد على وقف انتشار وباء كورونا، عبر  تشغيل الاشعارات وتشغيل إشارة البلوتوث الخاصة بك. يمكنك إلغاء هذا التطبيق في أي وقت</string>
    <string name="setup_header_3_ar"><![CDATA[إختر \"نعم\" للشاشتين التاليتين للإعداد:\n
1- بلوتوث\n
2- الإشعارات
]]></string>
    <string name="setup_header_1_en">Turn on settings on app</string>
    <string name="setup_header_2_en">Benefit from Ma3an and help stop the spread of COVID 19 by turning on Notifications and turning on your Bluetooth signal. You can uninstall this app any time.</string>
    <string name="setup_header_3_en">Select \"YES\" for the next two screens to set up.\n1- Bluetooth\n2- Push notifications</string>
    <string name="setup_warning_en">Both are needed for the app to work, your battery usage may increase.</string>
    <string name="notes">Android needs Location Permissions for Bluetooth to work. We don\'t have access to your physical location.</string>
    <string name="get_otp">Get OTP</string>
    <string name="wrong_number"><u>Wrong Number?</u></string>
    <string name="app_permission_fully_setup">App permissions are fully set up</string>
    <string name="app_permission_fully_setup_desc">Please leave all settings on until the outbreak ends.</string>
    <string name="setup_complete_header_1_ar">تم تشغيل جميع الإعدادات بنجاح</string>
    <string name="setup_complete_header_2_ar">يرجى ترك جميع الإعدادات قيد التشغيل حتى انتهاء وباء كورونا</string>
    <string name="setup_complete_header_1_en">All settings are now ON</string>
    <string name="setup_complete_header_2_en">Please leave all the settings turned on until the end of COVID-19 Pandemic</string>
    <string name="continue_">Continue</string>
    <string name="continue_ar">تابع</string>
    <string name="title_home">Home</string>
    <string name="title_home_ar">Home</string>
    <string name="title_upload">Upload</string>
    <string name="title_upload_ar">Upload</string>
    <string name="title_help">Help</string>
    <string name="title_help_ar">Help</string>
    <string name="main_header_1_ar">كيف يمكنك المساعدة في إيقاف انتشار وباء كوفيد ١٩</string>
    <string name="main_header_2_ar">إبقاء التطبيق مفتوحاً في وضع توفير الطاقة خاصة في الاجتماعات والأماكن العامة والنقل المشترك</string>
    <string name="main_header_1_en">How you can help stop the spread of COVID-19</string>
    <string name="main_header_2_en">Keep Ma3an open in power-saving mode, especially in meetings, public spaces, and public transport.</string>
    <string name="share_the_app_en">Share the app</string>
    <string name="share_the_app_ar">شارك هذا التطبيق</string>
    <string name="share_separator">-</string>
    <string name="share_the_app_subtitle_en">Ask friends and family to help</string>
    <string name="share_the_app_subtitle_ar">أطلع أحد أفراد العائلة بالإجراءات المطلوبة</string>
    <string name="setup_incomplete_1_ar">الإعدادات غير مكتملة</string>
    <string name="setup_incomplete_2_ar">إذا أردت أن تبقى سالماً وتساعد مجتمعك على البقاء آمناً من فيروس كورونا\u060C يجب عليك تشغيل كافة الاشعرات</string>
    <string name="setup_incomplete_1_en">Setup is incomplete!</string>
    <string name="setup_incomplete_2_en">Help stop the virus spread by allowing all permissions</string>
    <string name="app_permission_status_ar">وضع الإعدادات</string>
    <string name="app_permission_status">App Permissions Status</string>
    <string name="bluetooth_on">Bluetooth: On</string>
    <string name="bluetooth_on_ar">البلوتوث: مفعّل</string>
    <string name="location_on">Location Permission: On</string>
    <string name="location_on_ar">إذن الموقع: تشغيل</string>
    <string name="battery_optimiser">Battery Optimisation: Off</string>
    <string name="battery_optimiser_ar">تحسين البطارية: إيقاف</string>
    <string name="push_noti">Push Notification: On</string>
    <string name="push_noti_ar">الإشعارات: مفعّل</string>
    <string name="restart_app_setup">Complete app setup</string>
    <string name="upload_data">Upload Data</string>
    <string name="upload_agreement">By uploading, you agree to share with OTC your Ma3an proximity data for the past 21 days. <b>We do not collect any geolocation or personal data.</b></string>
    <string name="enter_code">Enter Code</string>
    <string name="open_location_setting">Application needs location permission in order to work. Do you want to enable location permission?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="ack_title">Your consent is needed for the following:</string>
    <string name="ack_mobile">To store your mobile number in a secured MOPH Ma3an registry</string>
    <string name="ack_data">To allow MOPH Ma3an users to send OTC information of encounters with you, if they are confirmed or suspected to have COVID-19</string>
    <string name="otp">Please enter the OTP sent to your mobile phone via sms</string>
    <string name="keep_push_on">Keep push notifications on too, so we can alert you if the app is not scanning.</string>
    <string name="verification_failed">Verification failed. Please try again</string>
    <string name="invalid_otp">Wrong OTP entered</string>
    <string name="unknown_error">An error has occurred. Please try again</string>
    <string name="must_be_six_digit">Must be a 6-digit number</string>
    <string name="invalid_user">Your account has been disabled. Please contact support.</string>
    <string name="too_many_requests">Too many requests. Please try again later.</string>
    <string name="service_ok_title">MOPH Ma3an is scanning to keep you safe!</string>
    <string name="service_ok_body">Restart phone if this notification disappears</string>
    <string name="service_not_ok_title">Oh no!</string>
    <string name="service_not_ok_body">MOPH Ma3an is not scanning.</string>
    <string name="service_not_ok_action">Check app now</string>
</resources>